--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,10 @@
 
 body{
     margin: 0em;
+    padding: 0cm;
     background-color: white;
     scroll-behavior: smooth;
+    
 }
 .nav-bar, .about-us-nav-bar, .contact-nav-bar{
     padding-top: 15px;
@@ -87,7 +89,7 @@ p{
  
     margin: 0em;
 }
-.landing-page-text-container, .about-page-text-container-1,.about-page-text-container-2, .contact-page-Locate-Us{
+.landing-page-text-container, .about-page-text-container-1,.about-page-text-container-2, .contact-page-Locate-Us, #form-head{
     padding-top: 12%;
     font-family: Abril;
     font-size: 70px;
@@ -171,7 +173,7 @@ p{
     padding-top: 20px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 45px;
-    color: rgba(34, 34, 34, 0.687);
+    color: rgba(160, 160, 160, 0.92);
 }
 
 hr{
@@ -191,4 +193,31 @@ td {
 
 .pno{
     font-size: 30px;
+}
+
+.feedback-form{
+    padding: 9%;
+}
+form{
+    padding-top: 10%;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 45px;
+    color: rgba(157, 157, 157, 0.92);
+    size: 20;
+}
+#submit{
+    width: 10em;
+    height: 3em;
+    font-size: 20px;
+}
+
+#full-name, #contact, #email-id{
+    font-size: 20px;
+    width: 15em;
+    height: 2em;
+}
+#text-box{
+    font-size: 20px;
+    width: 25em;
+    height: 10em;
 }
